--- a/app/templates/currencyexchange/index.html
+++ b/app/templates/currencyexchange/index.html
@@ -9,25 +9,12 @@
     {% csrf_token %}
 
 
-    {% for field in form %}
-    <div class="form-group">
-        {{ field.label_tag }}
-        {{ field }}
-        <div class="invalid-feedback">
-            {{ field.errors }}
-        </div>
-    </div>
-    {% endfor %}
-
-
-    {% comment %}
     <!-- ручной рендер формы -->
 
     <div>
         {{ form.non_field.errors }}
         <div class="form-group">
-            <label for="{{ form.amount }}" class="form-label">Количество</label>
-
+            <!-- <label for="{{ form.amount }}" class="form-label">Количество</label> -->
             {{ form.amount }}
             <div class="invalid-feedback">
                 {{ form.amount.errors }}
@@ -56,7 +43,6 @@
         <button type="submit" class="btn btn-primary">Расчитать</button>
     </div>
 
-    {% endcomment %}
 
 
     {% comment %}
